working on filters

--- a/05-static-job-listing/styles/style.css
+++ b/05-static-job-listing/styles/style.css
@@ -283,6 +283,7 @@ items
 }
 
 .special .job-flags {display: block;}
+.justNew .job-flags {display: block;}
 .flag {
   padding: .4em .7em;
   font-size: 12px;
